--- a/pages/home.html
+++ b/pages/home.html
@@ -59,7 +59,7 @@
         <aside class="aside-home">
             <ul class="aside-home__ul">
                 <li class="aside-home__li aside-home__li--fitness">
-                    <a href=""><lord-icon
+                    <a href="#"><lord-icon
                         src="https://cdn.lordicon.com/hovbgwmd.json" trigger="hover" colors="primary:#00008b,secondary:#000008b" style="width:30px;height:30px"  stroke="70">
                     </lord-icon>                          
                     </a>
@@ -72,13 +72,13 @@
                     <p>Emotional Intelligence</p>
                 </li>
                 <li class="aside-home__li aside-home__li--productivity">
-                    <a href=""><lord-icon
+                    <a href="#"><lord-icon
                         src="https://cdn.lordicon.com/hwuyodym.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
                     </lord-icon></i></a>
                     <p>Habits & Productivity</p>
                 </li>
                 <li class="aside-home__li aside-home__li--money">
-                    <a href=""><lord-icon
+                    <a href="#"><lord-icon
                         src="https://cdn.lordicon.com/rzsdhkun.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
                     </lord-icon></i></a>
                     <p>Money & Finance</p>
