--- a/pages/cEffect.html
+++ b/pages/cEffect.html
@@ -11,7 +11,9 @@
     <header class="header">
         <div class="header__start">
             <div class="header__start--menu">
-                <a href=""><i class="fa-solid fa-bars fa-2x"></i></a>
+                <a href="">
+                    <i class="fa-solid fa-bars fa-2x"></i>
+                </a>
             </div>
             <div class="header__start--brand">
                 <a href="../index.html">DEVELOPING OUR SELF</a>
