--- a/pages/home.html
+++ b/pages/home.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="header__start">
             <div class="header__start--menu">
-                <a href=""><i class="fa-solid fa-bars fa-2x"></i></a>
+                <a href="./home.html"><i class="fa-solid fa-bars fa-2x"></i></a>
             </div>
             <div class="header__start--brand">
                 <a href="../index.html">DEVELOPING OUR SELF</a>
