--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -57,7 +57,7 @@
                     </div>
                     <ul class="main-Sign__social-media">
                         <li>
-                            <a class="main-Sign__social-media--facebook" href="#" target="_blank">
+                            <a class="main-Sign__social-media--facebook" href="#">
                                 <i class="fa-brands fa-facebook"></i>
                             </a>
                         </li><!--logos-->
@@ -69,7 +69,7 @@
             </div>
         </main>
     </div>
-    <script src="../js/sign.js"></script>
+    <script src="../js/signIn.js"></script>
     <script src="../js/script.js"></script> 
 </body>
 </html>
