--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -56,7 +56,7 @@
             </div>
         </main>
     </div>
-    <script src="../js/sign.js"></script>
+    <script src="../js/signUp.js"></script>
     <script src="../js/script.js"></script>
 </body>
 </html>
