mvp proyecto final

--- a/pages/cEffect.html
+++ b/pages/cEffect.html
@@ -11,41 +11,40 @@
     <header class="header">
         <div class="header__start">
             <div class="header__start--menu">
-                <a href="">
-                    <i class="fa-solid fa-bars fa-2x"></i>
-                </a>
+                <a href="./home.html"><i class="fa-solid fa-bars fa-xl"></i></a>
             </div>
             <div class="header__start--brand">
                 <a href="../index.html">DEVELOPING OUR SELF</a>
             </div>
         </div>
-        <div class="header__center">
-            <div class="header__search">
-                <div class="header__search--input search-div">
+        <!-- <div class="header__center"> -->
+            
+        <!-- </div> -->
+        <div class="header__end">
+            <!-- <div class="header__search"> -->
+                <!-- <div class="header__search--input search-div">
                     <input class="search__input" type="text" placeholder="Search a book" name="" id="">
-                </div>
+                </div> -->
                 <div class="header__search--btn search-div">
-                    <a href=""><lord-icon src="https://cdn.lordicon.com/xfftupfv.json" trigger="hover" colors="primary:#00008b">
+                    <a href=""><lord-icon src="https://cdn.lordicon.com/xfftupfv.json" trigger="hover" colors="primary:#00008b" style="width:20px;height:20px;top:2px">
                     </lord-icon></a>
                 </div>
-            </div>
-        </div>
-        <div class="header__end">
+            <!-- </div> -->
             <div class="header__end--notification end__btn">
                 <a href=""><lord-icon
-                    src="https://cdn.lordicon.com/psnhyobz.json" colors="primary:#00008b" trigger="hover" style="width:25px;height:25px;top:2px">
+                    src="https://cdn.lordicon.com/psnhyobz.json" colors="primary:#00008b" trigger="hover" style="width:20px;height:20px;top:2px">
                 </lord-icon></a>
             </div>
             <div class="header__end--tool end__btn">
-                <a href=""><lord-icon
-                    src="https://cdn.lordicon.com/svbmmyue.json" colors="primary:#00008b" trigger="hover" style="width:25px;height:25px;top:2px;">
+                <a href="./tools.html"><lord-icon
+                    src="https://cdn.lordicon.com/svbmmyue.json" colors="primary:#00008b" trigger="hover" style="width:20px;height:20px;top:2px;">
                 </lord-icon></a>
             </div>
             <div class="header__end--user end__btn">
                 <!-- <a href=""><i class="fa-regular fa-user fa-lg"></i></a> -->
                 <a href="">
                     <lord-icon
-                    src="https://cdn.lordicon.com/bhfjfgqz.json" colors="primary:#00008b" trigger="hover" style="width:25px;height:25px;top:2px">
+                    src="https://cdn.lordicon.com/bhfjfgqz.json" colors="primary:#00008b" trigger="hover" style="width:20px;height:20px;top:2px">
                     </lord-icon>
                 </a>
             </div>
